www/src/js/views/contribute/ContributeContainer/ContributeContainer.scss
@import '~utils/modules-entry';

.pageContainer {
  composes: page-container from global;
  max-width: 40rem;

  header {
    text-align: center;

    img {
      display: inline-block;
      max-width: 6rem;
      margin: 0 0.5rem 1rem;

      &.topImage {
        max-width: 12rem;
      }
    }

    h1 {
      margin-bottom: 1rem;
      font-weight: bold;
      font-size: 2rem;
    }

    h2 {
      margin-top: 3rem;
      font-weight: bold;
      font-size: 1.9rem;
    }

    h3 {
      font-size: 1.6rem;
    }
  }

  section {
    margin-bottom: 16rem;
  }

  hr {
    margin-bottom: 4rem;
  }
}

.reviewWrapper {
  display: grid;
  grid-gap: 0.5rem;
  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));

  .reviewButton {
    line-height: 1.25;
    white-space: normal;

    span {
      display: block;
      font-weight: bold;
      font-size: 1.5rem;
    }
  }
}

.githubLinks,
.contributeLinks {
  display: grid;
  margin-bottom: 2rem;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));

  :global(.btn) {
    white-space: normal;
  }

  h4 {
    margin: 1rem 0 0.3rem;
    font-weight: bold;
    font-size: 1.2rem;
  }

  p {
    font-size: 1rem;
    line-height: 1.3;
  }
}

.betaButton {
  svg {
    display: block;
    width: 3rem;
    height: 3rem;
    margin: 0.5rem auto;
  }
}

.attribution {
  margin-top: 4rem;
  font-size: 0.9rem;
  color: var(--gray-light);
}

